--- a/app/views/static_pages/policy.html.erb
+++ b/app/views/static_pages/policy.html.erb
@@ -1,5 +1,5 @@
-<div class="col-lg-9 col-md-9 col-sm-12">
-	<div class="container">
+<div class="container main-container">
+	<div class="col-lg-12 col-md-9 col-sm-12">
 		<p>
 			 Магазин <strong>exmample.com</strong> уделяет большое внимание сохранению конфиденциальности вашей информации при осуществлении покупок через Интернет. Мы прилагаем все усилия по защите информации, которую вы нам предоставляете. Пожалуйста, внимательно прочитайте следующий текст, чтобы получить соответствующую информацию относительно политики конфиденциальности личных данных нашей компании.
 		</p>
