--- a/app/views/static_pages/user_agreement.html.erb
+++ b/app/views/static_pages/user_agreement.html.erb
@@ -1,5 +1,5 @@
-<div class="col-lg-9 col-md-9 col-sm-12">
-	<div class="container">
+<div class="container main-container">
+	<div class="col-lg-12 col-md-9 col-sm-12">
 		<p>
 			 Эта соглашение является договором присоединения и заключается между администрацией <b>SHMOT.com.ua</b> (далее - Администрация), расположенного на доменном имени&nbsp;<b>SHMOT.com.ua&nbsp;</b>(далее - Сайт), и&nbsp;частным лицом - что, посетила страницы сайта и воспользовалась хотя бы одним из сервисов, предоставляемых в рамках сайта (далее - Пользователем), вместе (Стороны).
 		</p>
